[tool.poetry]
name = "yesan"
version = "0.1.0"
description = "A personal finance application"
authors = ["Riku Rauhala <riku@rauhala.io>"]

[tool.poetry.dependencies]
invoke = "^1.7.0"
python = "^3.8"
python-dotenv = "^0.20.0"
tkcalendar = "^1.6.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
coverage = "^6.3.2"
pylint = "^2.13.4"
pytest = "^7.1.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
